Twenty Twenty: Fix broken sale badge left alignment

--- a/assets/js/atomic/blocks/product-elements/image/style.scss
+++ b/assets/js/atomic/blocks/product-elements/image/style.scss
@@ -22,7 +22,7 @@
 		}
 	}
 
-	.wc-block-components-product-sale-badge {
+	.wc-block-grid__product-onsale.wc-block-components-product-sale-badge {
 		&--align-left {
 			position: absolute;
 			left: $gap-smaller/2;
